# kaelio

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.understand-anything/: fingerprints.json  knowledge-graph.json  meta.json
docs/: 00-architecture-overview.md  01-editor-engine.md  03-file-operations.md  04-pdf-export.md  05-ui-layout.md  06-auto-update.md  07-release-pipeline.md  08-pdf-viewing.md  plan.md  spec.md  tasks.md
docs/superpowers/plans/: 2026-06-16-split-view-phase1.md  2026-06-16-split-view-phase2.md  2026-06-16-split-view-phase3.md  2026-06-16-text-display.md  2026-06-17-pdf-viewer.md
docs/superpowers/specs/: 2026-06-16-activitybar-icons-and-tooltips.md  2026-06-16-editable-split-view-design.md  2026-06-16-export-restructure-and-fixes.md  2026-06-16-page-guide-and-activitybar-fixes.md  2026-06-16-split-view-v2-design.md  2026-06-16-split-view-v2.1-fixes.md  2026-06-16-text-display-design.md  2026-06-17-delete-and-image-capture.md  2026-06-17-drag-to-copy.md  2026-06-17-export-and-delete-fixes.md  2026-06-17-pdf-viewer-design.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: index.html  package-lock.json  package.json
web/src/: main.ts
wiki/: 00-overview.md  01-origin.md  02-timeline.md  03-architecture.md  lessons.md
wiki/design/: README.md
wiki/diagrams/: README.md
wiki/reference/: README.md
