[package]
name = "kaelio"
version = "0.9.2"
description = "Lightweight project file viewer and markdown/document reader"
authors = ["Kael"]
edition = "2024"

[lib]
name = "kaelio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
libc = "0.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-process = "2"
trash = "5"
notify = { version = "7", features = ["macos_kqueue"] }
wait-timeout = "0.2"
git2 = { version = "0.20", features = ["vendored-openssl"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
