[package]
name = "kaelio"
version = "0.9.5"
description = "Lightweight project file viewer and markdown/document reader"
authors = ["Kael"]
edition = "2024"

[lib]
name = "kaelio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
libc = "0.2"
zip = { version = "4.6.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-process = "2"
trash = "5"
# Default backend = FSEvents on macOS (one fd for the whole recursive tree).
# The macos_kqueue feature opens one fd PER watched file, which exhausts the
# process descriptor table when a folder with node_modules is opened and then
# breaks child-process spawning (pandoc) with EBADF / "too many open files".
notify = "7"
wait-timeout = "0.2"
git2 = { version = "0.20", features = ["vendored-openssl"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
